<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name" translatable="false">Sudoku</string>
    <string name="sudoku" translatable="false">Sudoku</string>
    <string name="app_description">A Sudoku app with OneUI-Design.</string>
    <string name="about_app">About Sudoku</string>
    <string name="sudoku_lib_github_link" translatable="false">https://github.com/sfuhrm/sudoku</string>
    <string name="sudoku_lib_license_github_link" translatable="false">https://github.com/sfuhrm/sudoku/blob/master/LICENSE</string>
    <string name="daily_sudoku_notification_channel_id" translatable="false">Daily_Sudoku_Notification_Channel</string>
    <string name="size4" translatable="false">4×4</string>
    <string name="size9" translatable="false">9×9</string>
    <string name="size16" translatable="false">16×16</string>
    <string name="commonutils_app_description" translatable="false">@string/app_description</string>
    <string name="commonutils_email" translatable="false">sudoku@leonard-lemke.com</string>
    <string name="commonutils_privacy_website" translatable="false">https://www.leonard-lemke.com/apps/sudoku/privacy-policy</string>
    <string name="commonutils_yes">Yes</string>
    <string name="commonutils_no">No</string>
    <string name="commonutils_delete">Delete</string>
    <string name="commonutils_no_entry">No entry</string>
    <string name="commonutils_pause">Pause</string>
    <string name="commonutils_resume">Resume</string>
    <string name="commonutils_history">History</string>
    <string name="commonutils_statistics">Statistics</string>
    <string name="commonutils_oobe1_title">Beautiful design</string>
    <string name="commonutils_oobe2_title">Free</string>
    <string name="commonutils_oobe3_title">No ads</string>
    <string name="commonutils_oobe2_summary">No subscriptions, no in-app purchases, no costs at all.</string>
    <string name="commonutils_oobe3_summary">No annoying ads after each Sudoku.</string>
    <string name="commonutils_tos">Terms of Service</string>
    <string name="commonutils_tos_content">It is not permitted to use this app contrary to morality or the laws in force. \n\nYou also agree that you will not use this app for any purposes prohibited by United States law, including, without limitation, the development, design, manufacture, or production of missile, chemical or biological weapons. \nHowever, this restriction will not apply in the event of the occurrence (certified by the United States Centers for Disease Control or successor body) of a widespread viral infection transmitted via bites or contact with bodily fluids that causes human corpses to reanimate and seek to consume living human flesh, blood, brain or nerve tissue and is likely to result in the fall of organized civilization. \n\nA special consideration, which may include monetary compensation, will be provided to a limited number of users who read this section of the Terms and Services and contact me at writing-an-email-to-this-address-will-cost-you-10-euro@leonard-lemke.com. This offer may be withdrawn at any time without any notice. \n\nAdditional questions will be answered at this-email-is-way-too-long-and-hopefully-you-cannot-copy-paste@leonard-lemke.com. \n\nRegarding the contact features provided in various places within this app, which generate a topic-specific, prewritten email when activated, the following applies: These templates are intended solely as a starting point for your personalized message. Sending one of these templates unchanged, or a blank email, constitutes misuse of the feature and is not permitted. By doing so anyway, you legally agree to be classified as a person demonstrably incapable of properly operating basic functions of their smartphone and its email application functions. Such a classification renders further communication obsolete and releases the recipient from any obligation to respond.</string>
    <string name="commonutils_oobe_tos_text">By continuing, you agree to the %1$s.</string>
    <string name="commonutils_oobe_new_tos_text">The %1$s have been updated. By continuing, you agree to the new %1$s.</string>
    <string name="commonutils_open_in_playstore">Open in Play Store</string>
    <string name="commonutils_open_source_licenses">Open source licenses</string>
    <string name="commonutils_about_me">About me</string>
    <string name="commonutils_write_email">Write an e-mail</string>
    <string name="commonutils_website">Website</string>
    <string name="commonutils_support_me_text">If you want to support me in any way, feel free to send me an e-mail</string>
    <string name="commonutils_support_me">Support me</string>
    <string name="commonutils_rate_app">Rate app in Play Store</string>
    <string name="commonutils_write_review">Write a review</string>
    <string name="commonutils_share">Share</string>
    <string name="commonutils_share_app">Share app</string>
    <string name="commonutils_useful_links">Useful links</string>
    <string name="commonutils_playstore_ad">ADVERTISEMENT!!!&#129313;&#129396;</string>
    <string name="commonutils_playstore_redirect_message">According to Google Play, this is \"Deceptive advertisement that simulates or impersonates the user interface of an app feature\"… Since app updates are otherwise rejected by Google Play, here\'s a hint: This button leads (surprisingly?&#129313;) to my developer page on Google Play, continue?</string>
    <string name="commonutils_settings">Settings</string>
    <string name="commonutils_design">Design</string>
    <string name="commonutils_system_default">System default</string>
    <string name="commonutils_general">General</string>
    <string name="commonutils_language">Language</string>
    <string name="commonutils_change_language">Change app language</string>
    <string name="commonutils_change_language_not_supported_by_device">Change language is not supported by your device.</string>
    <string name="commonutils_delete_appdata_and_exit">Delete App-Data and exit</string>
    <string name="commonutils_delete_appdata_and_exit_warning">Attention: This will delete all personal data. Continue? </string>
    <string name="commonutils_dev_options">Developer options</string>
    <string name="commonutils_more_information">More Information</string>
    <string name="commonutils_privacy_policy">Privacy Policy</string>
    <string name="commonutils_report_bug">Report bug or improvement</string>
    <string name="commonutils_no_email_app_installed">No e-mail app installed…</string>
    <string name="commonutils_no_browser_app_installed">No browser app installed…</string>
    <string name="commonutils_error_cant_open_url">Error: URL could not be opened.</string>
    <string name="sudoku_lib">Sudoku library</string>
    <string name="sudoku_lib_license" translatable="false">LGPL 3</string>
    <string name="sudoku_lib_license_text">Uses %1$s licensed under %2$s.</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="keep_screen_on_summary">Keep screen on while playing</string>
    <string name="animations">Animations</string>
    <string name="animations_summary">Animate fields</string>
    <string name="regional_highlight">Regional Highlight</string>
    <string name="regional_highlight_summary">When a field is selected, the row, line and block will be highlighted.</string>
    <string name="number_highlight">Highlight selected number</string>
    <string name="number_highlight_summary">When a number is selected, all other fields with the same number will be highlighted.</string>
    <string name="delete_invalid_sudokus">Delete invalid Sudokus</string>
    <string name="delete_invalid_sudokus_summary">Delete incorrectly generated Sudokus or Sudokus that were corrupted during saving to the database.</string>
    <string name="error_limit">Error limit</string>
    <string name="no_limit">No limit</string>
    <string name="error_limit_reached">Error limit reached (%1$d).</string>
    <string name="export_data">Export data</string>
    <string name="export_data_summary">Export JSON file</string>
    <string name="export_data_ongoing">Data is being exported…</string>
    <string name="export_data_ongoing_writing_file">Data is being written to file…</string>
    <string name="export_data_success">Data exported successfully.</string>
    <string name="import_data">Import data</string>
    <string name="import_data_summary">Import JSON file</string>
    <string name="import_data_ongoing">Data is being imported…</string>
    <string name="import_data_ongoing_processing">Data is being processed…</string>
    <string name="import_data_success">Data imported successfully.</string>
    <plurals name="import_data_success_skipped">
        <item quantity="one">Data imported successfully. %d invalid Sudoku was skipped.</item>
        <item quantity="other">Data imported successfully. %d invalid Sudokus were skipped.</item>
    </plurals>
    <string name="import_data_error_no_valid_json">Error: No valid JSON file.</string>
    <string name="import_data_error_no_valid_file">Error: No valid file.</string>
    <string name="import_data_message">Caution: Importing may take some time. Already existing data may be overwritten. In the following screen, please select the JSON file created during export (e.g.: \"sudoku_export_[date].json\").</string>
    <string name="error_no_file_selected">Error: No file selected.</string>
    <string name="very_easy">Very easy</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="expert">Expert</string>
    <string name="current_time">%1$s</string>
    <string name="current_errors">Errors: %1$d</string>
    <string name="current_errors_with_limit">Errors: %1$d/%2$d</string>
    <string name="current_hints">Hints: %1$d</string>
    <string name="current_progress">%1$d\%%</string>
    <string name="completed_title">Completed</string>
    <string name="sudoku_state_in_progress">In progress</string>
    <string name="sudoku_state_error_limit_reached">Error limit reached</string>
    <string name="sudoku_completed">Look, I have successfully completed a Sudoku:\n</string>
    <string name="sudoku_solving">Look, I am currently solving this Sudoku: \nProgress: %1$d\%% \n</string>
    <string name="sudokuStatisticsString">Type: %1$s \nSize: %2$d×%2$d \nDifficulty: %3$s \nTime: %4$s \nErrors: %5$d \nHints: %6$d \nNotes: %7$d \nRegional highlight used: %8$s \nNumber highlight used: %9$s \nCreated: %10$s \nUpdated: %11$s</string>
    <string name="note">Note</string>
    <string name="hint">Hint (%1$d)</string>
    <string name="restart">Restart</string>
    <string name="gameover">Gameover</string>
    <string name="share_sudoku">Share Sudoku</string>
    <string name="initial_sudoku">Initial Sudoku</string>
    <string name="current_sudoku">Current Sudoku</string>
    <string name="normal_sudoku">Normal Sudoku</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="difficulty">Difficulty</string>
    <string name="statistics_filter">Statistics filter</string>
    <string name="normal_sudokus">Normal Sudokus</string>
    <string name="daily_sudokus">Daily Sudokus</string>
    <string name="sudoku_level">Sudoku level</string>
    <string name="notifications">Notifications</string>
    <string name="daily_sudoku_notification_channel_name">Daily Sudoku Notification</string>
    <string name="daily_sudoku_notification_channel_description">Get notified when a new daily sudoku is available.</string>
    <string name="play_games_leaderboards">Leaderboards</string>
    <string name="play_games_achievements">Achievements</string>
    <string name="intro">How to play</string>
    <string name="intro_title">Rules</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue (%1$s, %2$s)</string>
</resources>