<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2022-2026 Leonard Lemke

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        https://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/commonutils_general">
        <SwitchPreferenceCompat
            android:key="keep_screen_on_pref"
            android:summary="@string/keep_screen_on_summary"
            android:title="@string/keep_screen_on" />

        <PreferenceScreen
            android:key="@string/commonutils_preference_key_language"
            android:summary="@string/commonutils_change_language"
            android:title="@string/commonutils_language"
            app:isPreferenceVisible="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/sudoku">
        <PreferenceScreen
            android:key="intro_pref"
            android:summary="@string/intro_title"
            android:title="@string/intro" />
        <SwitchPreferenceCompat
            android:key="animations_pref"
            android:summary="@string/animations_summary"
            android:title="@string/animations" />
        <SwitchPreferenceCompat
            android:key="highlight_regional_pref"
            android:summary="@string/regional_highlight_summary"
            android:title="@string/regional_highlight" />
        <SwitchPreferenceCompat
            android:key="highlight_number_pref"
            android:summary="@string/number_highlight_summary"
            android:title="@string/number_highlight" />
        <DropDownPreference
            android:defaultValue="3"
            android:entries="@array/error_limit_entries"
            android:entryValues="@array/error_limit_values"
            android:key="error_limit_pref"
            android:title="@string/error_limit" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications">
        <SeslSwitchPreferenceScreen
            android:key="daily_notification_pref"
            android:summary="@string/daily_sudoku_notification_channel_description"
            android:title="@string/daily_sudoku_notification_channel_name" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/commonutils_preference_key_dev_options"
        android:title="@string/commonutils_dev_options"
        app:isPreferenceVisible="false">
        <PreferenceScreen
            android:key="export_data_pref"
            android:summary="@string/export_data_summary"
            android:title="@string/export_data" />
        <PreferenceScreen
            android:key="import_data_pref"
            android:summary="@string/import_data_summary"
            android:title="@string/import_data" />
        <PreferenceScreen
            android:key="delete_invalid_sudokus_pref"
            android:summary="@string/delete_invalid_sudokus_summary"
            android:title="@string/delete_invalid_sudokus" />
        <PreferenceScreen
            android:key="@string/commonutils_preference_key_delete_app_data"
            android:title="@string/commonutils_delete_appdata_and_exit" />
    </PreferenceCategory>

</PreferenceScreen>
