<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_location="main_content">

    <LinearLayout
        android:id="@+id/main_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/easy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/hard" />

        </LinearLayout>

        <dev.oneuiproject.oneui.widget.HapticSeekBar
            android:id="@+id/difficulty_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/new_game_button"
            style="@style/ButtonStyle.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:layout_marginBottom="40dp"
            android:text="@string/new_game" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_game_button"
            style="@style/ButtonStyle.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:text="@string/continue_game" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
